# OpenGLESLearn

./: README.md  settings.gradle
app/: CmakeLists.txt  build.gradle
app/src/androidTest/java/catnemo/top/opengleslearn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gl.cpp
app/src/main/java/catnemo/top/opengleslearn/: App.kt  BaseGLRender.kt  (+4 more)
app/src/main/res/drawable/: divider.xml
app/src/main/res/layout/: activity_animate_picture.xml  activity_java_impl.xml  activity_main.xml  activity_nativ_egl.xml  activity_particle.xml  activity_texture.xml  activity_triangle.xml
app/src/main/res/raw/: color_fragment_shader.glsl  color_vertex_shader.glsl  particle_fragment_shader.glsl  particle_vertex_shader.glsl  simple_fragment_shader.glsl  simple_vertex_shader.glsl  texture_fragment_shader.glsl  texture_vertex_shader.glsl
app/src/main/res/values/: strings.xml
glcore/: build.gradle
glcore/src/main/: AndroidManifest.xml
glcore/src/main/cpp/: CMakeLists.txt  GLCoreJni.cpp  GLRender.cpp  GLRender.h  GlCoreJni.h  TxtureProgram.cpp  TxtureProgram.h
glcore/src/main/cpp/gles/: EglCore.cpp  EglSurfaceBase.cpp  GLUtil.cpp  OffScreenSurface.cpp  WindowSurface.cpp
glcore/src/main/cpp/gles/include/: EglCore.h  EglSurfaceBase.h  GLUtil.h  OffScreenSurface.h  WindowSurface.h  log.h
glcore/src/main/cpp/render/: GLRender.cpp  TriangleProgram.cpp  TxtureProgram.cpp
glcore/src/main/cpp/render/include/: GLRender.h  TriangleProgram.h  TxtureProgram.h
glcore/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+55 files in other folders)
